--- a/src/Components/Dashboard/Register/Register.css
+++ b/src/Components/Dashboard/Register/Register.css
@@ -1,80 +1,68 @@
-.register-container{
+.reg-container{
   display: grid;
-  width: 100%;
-  height: 100vh;
+  height: 110vh;
+  width: auto;
   place-items: center;
 }
-.register-form {
-  margin-top: 5vh;
-  height: 95vh;
-  width: 60vh;
+.reg-card{
+  height: 110vh;
   background-color: rgb(244, 244, 244);
-  border-radius: 5vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 0px 0px;
+  margin-top: 5vh;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 32px, rgba(0, 0, 0, 0.22) 0px 5px 5px;
 }
-.register-form h1{
-  text-align: center;
+.reg-card img{
+  width: 80vh;
+  height: 110vh;
+}
+.reg{
+  display: flex;
+}
+.reg h1{
+  font-size: 3.6vh;
+  font-weight: 700;
+  margin-left: 4vh;
   padding-top: 2vh;
   color: #219ebc;
-  font-size: 3vh;
-  font-weight: 500;
 }
-.register-field{
-  display: grid;
-  place-items: center;
-  margin-top: 5vh;
-}
-.register-field input{
-  width: 40vh;
-  padding: 1vh;
-  display: inline-block;
-  border: none;
-  border-radius: 10px;
-  margin: 14px;
-}
-.register-field button{
-  width: 20vh;
-  background-color: #219ebc;
-  color: white;
-  padding: 1vh;
-  border-radius: 5vh;
-  margin-top: 2vh;
-}
-.register-field button:hover{
-  background-color: #ffb703;
-}
-.register-field label{
+.reg span{
+  font-size: 1.5vh;
+  margin-left: 4vh;
+  color: #959595;
   font-weight: 400;
 }
-.register-field span{
-  margin-top: 1vh;
-  font-weight: 300;
-  color: #219ebc;
-}
-.register-field span:hover{
-  cursor: pointer;
-  color: #ffb703;
-}
-.uploadimg{
+.reg-inputs{
   display: grid;
-  place-items: center;
+  margin-top: 1.3vh;
+  margin-left: 4vh;
+  gap: 1vh;
 }
-@media screen and (max-width: 600px) {
-  .register-container{
-    height: 100%;
-  }
-  .register-form {
-    height: 80vh;
-    width: 40vh;
-  }
-  .register-field input{
-    width: 30vh;
-    padding: 0.9vh;
-    margin: 14px;
-  }
-  .register-field button{
-    width: 12vh;
-    padding: 1vh;
-    margin-top: 2vh;
-  }
+
+.reg-inputs input{
+  padding: 1.2vh;
+  margin-right: 2vh;
+  width: 60vh;
+  border: 1px solid #d3d3d3;
+  border-radius: 1vh;
 }
+.reg-inputs input:focus{
+  border: 0.3px solid #094fcf;
+}
+.reg-inputs button{
+  margin-top: 1vh;
+  padding: 1.3vh;
+  background-color: #219ebc;
+  color: #fff;
+  width: 20vh;
+  border-radius: 5vh;
+}
+.reg-inputs button:hover{
+  background-color: #ffb703;
+}
+.error{
+  margin-top: 1px;
+  color: #ed4337;
+  font-size: 13px;
+}
+
+
+
