--- a/src/Components/Tasklog/Allusers/Cards/AllusersCards.css
+++ b/src/Components/Tasklog/Allusers/Cards/AllusersCards.css
@@ -17,6 +17,7 @@
 }
 .allcard-items h1{
    margin-top: 2vh;
+   font-size: 1vh;
 }
 .allcard-items h2{
     margin-top: 1vh;
@@ -29,7 +30,8 @@
     cursor: pointer;
  }
 .allcard-items img{
-    padding-top: 2vh;
+    border-radius: 50%;
+    margin-top: 2vh;
     width: 16vh;
 }
 @media screen and (max-width: 600px) {
