--- a/src/Components/Dashboard/Admindash/AdminDash.css
+++ b/src/Components/Dashboard/Admindash/AdminDash.css
@@ -32,6 +32,7 @@
     box-shadow:4px 7px 20px rgba(0,0,0,.4);
 }
 
+
 .Sidedrawer ul{
     display: grid;
     gap: 3vh;
@@ -60,6 +61,10 @@
     text-align: center;
     color: #024363;
     padding-top: 4vh;
+}
+.admintop-nav button{
+    background-color: #219ebc;
+    padding: 2vh;
 }
 .display-cards{
     display: flex;
