--- a/src/Components/Dashboard/Admindash/AdminDash.css
+++ b/src/Components/Dashboard/Admindash/AdminDash.css
@@ -1,34 +1,49 @@
 .Heading{
+    display: flex;
     background-color: #024363;
     height: 15vh;
 }
 .Heading h2{
     color: white;
     text-align: center;
-    margin-top: -8vh;
-    font-size: 2.5vh;
+    font-size: 2.4vh;
     text-align: center;
-    margin-left: 6.7vh;
 }
 .Heading h3{
     color: #32CD32;
     text-align: center;
+    
 }
-.avtar {
+.head-img {
     width: 10vh;
-    padding-top: 2vh;
+    margin-top: 2vh;
     margin-left: 2vh;
 }
 
+.avtar{
+    border-radius: 50%;
+    border: 3px solid #023047;
+}
+
+
+.Heading .head-items{
+    display: grid;
+    margin-left: 3vh;
+}
+.head-items h2{
+    margin-top: 3vh;
+}
+.head-items h3{
+    margin-bottom: 4vh;
+    margin-right: 3vh;
+}
 .Sidedrawer{
     position: fixed;
-    width: 270px;
+    width: 280px;
     top:0;
     height: 100vh;
     background-color: #023047;
     overflow:hidden;
-    transition:width .3s ease;
-    cursor:pointer;
     box-shadow:4px 7px 20px rgba(0,0,0,.4);
 }
 
@@ -37,16 +52,30 @@
     display: grid;
     gap: 3vh;
     background-color: transparent;
-    padding-left: 4vh;
-    margin-top  : 30px;  
+    margin-left: 4vh;
+    margin-top  : 5vh;  
 }
 .Sidedrawer li{
-    font-size: 2.9vh;
+    font-size: 2.5vh;
     font-weight: 500;
     padding-left: 2vh;
 }
 .Sidedrawer li:hover{
     color: #ffb703;
+    cursor: pointer;
+}
+.Sidedrawer button{
+    background-color: #ffb703;
+    border-radius: 1vh;
+    margin-left: 4vh;
+    color: #023047;
+    padding: 1vh;
+    width: 10vh;
+
+}
+.Sidedrawer button:hover{
+    background-color: #219ebc;
+
 }
 .admintop-nav {
     margin-top: -5vh;
@@ -62,10 +91,7 @@
     color: #024363;
     padding-top: 4vh;
 }
-.admintop-nav button{
-    background-color: #219ebc;
-    padding: 2vh;
-}
+
 .display-cards{
     display: flex;
     margin-left: 40vh;
@@ -92,7 +118,7 @@
         padding-left: 1vh;
         margin-top  : 30px;  
     }
-    .Sidedrawer ul:hover{
+    .Sidedrawer li:hover{
         font-size: 12px;
         color: #ffb703;
     }
