--- a/src/Components/Tasklog/Allusers/Cards/AllusersCards.css
+++ b/src/Components/Tasklog/Allusers/Cards/AllusersCards.css
@@ -1,6 +1,6 @@
 .alluser-card{
     width: 40vh;
-    height: 40vh;
+    height: 50vh;
     background-color:  rgb(244, 244, 244);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     border-radius: 2vh;
@@ -9,15 +9,16 @@
     display: grid;
     place-items: center;
 }
-.allcard-items lable {
-    margin-top: 2vh;
+.allcard-items label {
+    margin-top: 3vh;
     font-size: 3vh;
     font-weight: 500;
     color: #219ebc;
 }
 .allcard-items h1{
    margin-top: 2vh;
-   font-size: 1vh;
+   font-size: 2vh;
+   font-weight: 400;
 }
 .allcard-items h2{
     margin-top: 1vh;
@@ -32,7 +33,8 @@
 .allcard-items img{
     border-radius: 50%;
     margin-top: 2vh;
-    width: 16vh;
+    width: 19vh;
+    height: 19vh;
 }
 @media screen and (max-width: 600px) {
     .alluser-card{
