login remember user

--- a/src/Components/Forms/Login/Log.css
+++ b/src/Components/Forms/Login/Log.css
@@ -106,3 +106,10 @@
     margin-left: 4vh;
     margin-top: 2vh;
 }
+.log-inputs .toop{
+    display: flex;
+    gap: 1vh;
+}
+ .toop i{
+    margin-top: 3px;
+}
