--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -75,7 +75,12 @@ select {
     border-color: red;
     border: 1.5px solid red;
 }
-
+.task-table h2{
+    font-size: 3vh;
+    font-weight: 600;
+    text-align: center;
+    color: #219ebc;
+}
 @media screen and (max-width: 600px) {
     .top_head {
         text-align: center;
