--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -76,6 +76,7 @@ select {
     border: 1.5px solid red;
 }
 .task-table h2{
+    margin-top: 4vh;
     font-size: 3vh;
     font-weight: 600;
     text-align: center;
